--- a/composer.json
+++ b/composer.json
@@ -11,4 +11,9 @@
             "role": "Developer"
         }
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
+    }
 }
