--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "stable",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "1.0"
         }
     }
 }
